style: fixed analytics overflow

--- a/client/components/userAnalytics.css
+++ b/client/components/userAnalytics.css
@@ -1,17 +1,33 @@
 .charts-container {
   display: flex;
-  padding: 10vh;
+  flex-direction: column;
+  flex-wrap: wrap;
+  height: 100%;
+  max-height: 45%;
 }
 
 .chart-item {
   display: flex;
+  min-height: 100%;
+  flex: 1 1 100%;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  flex: 0 0 50%;
 }
 
 .pie-chart-container {
   display: flex;
   justify-content: center;
+}
+
+/* .chart-item > p {
+  margin-bottom: auto;
+} */
+
+.chartWrapper {
+  justify-self: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
 }
