--- a/client/components/userProfile.css
+++ b/client/components/userProfile.css
@@ -11,7 +11,7 @@
 
 .profile-left {
   flex: 0 0 30%;
-  margin: 0 50px 0 50px;
+  margin: 0 2% 0 2%;
 }
 
 .profile-main-info {
